syntax = "proto3";

package qpuapi;
option java_multiple_files = true;
option java_package = "io.grpc.proteusclient";
option java_outer_classname = "QPUProto";
option go_package = "github.com/dvasilas/proteus/internal/proto/qpuapi";

import "google/protobuf/timestamp.proto";

service QPUAPI {
  rpc QueryUnary(QueryReq) returns (QueryResp) {}
  rpc QueryUnary1(QueryReq) returns (QueryResp1) {}
}

message QueryReq {
  string queryStr = 1;
}

message QueryResp {
  repeated QueryRespRecord respRecord = 1;
}

message QueryResp1 {
  repeated QueryRespRecord1 respRecord = 1;
}

message QueryRespRecord {
  string record_id = 1;
  map<string, string> attributes = 2;
  map<string, google.protobuf.Timestamp> timestamp = 3;
}

message QueryRespRecord1 {
  map<string, Payload> response = 1;
  map<string, google.protobuf.Timestamp> timestamp = 2;
}

message Payload {
  enum PayloadType {
    STRING = 0;
    INT = 1;
    FLOAT = 2;
  }
  PayloadType type = 1;
  bytes value = 2;
}
